logs/self-supervised-08-19-48396139-4294967294.out

Lmod is automatically replacing "gcc/12.3" with "intel/2023.2.1".


Due to MODULEPATH changes, the following have been reloaded:
  1) blis/0.9.0     2) flexiblas/3.3.1     3) openmpi/4.1.5


Lmod is automatically replacing "intel/2023.2.1" with "gcc/12.3".


Inactive Modules:
  1) cuda/11.8     2) cudacore/.11.8.0

Due to MODULEPATH changes, the following have been reloaded:
  1) blis/0.9.0     2) flexiblas/3.3.1     3) openmpi/4.1.5

Traceback (most recent call last):
  File "<frozen runpy>", line 189, in _run_module_as_main
  File "<frozen runpy>", line 159, in _get_module_details
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/lustre06/project/6006845/atjhin/label_tweets/Refactored/self_supervised_learning.py", line 105
    max_epochs=max_epochs
               ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
